# gproxy

./: .gitignore  Cargo.toml  DEV.md  LICENSE  Makefile  README.md  dev-build.sh  install.sh  release.sh
.github/workflows/: ci.yml  release.yml
crates/giant-proxy/: Cargo.toml
crates/giant-proxy-ui/: package.json
crates/giant-proxy-ui/src/: app.js  dashboard.css  dashboard.html  dashboard.js  index.html  styles.css
crates/giant-proxy-ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/giant-proxy-ui/src-tauri/capabilities/: default.json
crates/giant-proxy-ui/src-tauri/icons/: AppIcon.icns
crates/giant-proxy-ui/src-tauri/src/: daemon.rs  main.rs  tray.rs
crates/giant-proxy/src/: client.rs  main.rs
crates/giantd/: Cargo.toml
crates/giantd/src/: api.rs  certs.rs  config.rs  connector.rs  convert.rs  errors.rs  events.rs  lib.rs  main.rs  pac.rs  pid.rs  proxy.rs  routing.rs  rules.rs  traffic.rs
crates/giantd/tests/: api_test.rs  certs_test.rs  config_test.rs  rules_test.rs  startup_test.rs  toml_roundtrip_test.rs
profiles/: example-preprod.toml
service/: com.giantproxy.daemon.plist  giantd.service
