[package]
name = "giantd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "giantd"
path = "src/main.rs"

[lib]
name = "giantd"
path = "src/lib.rs"

[dependencies]
hudsucker = { version = "0.24", features = ["rcgen-ca"] }
rcgen = "0.14"
rustls = "0.23"
rustls-pemfile = "2"
tokio = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tower = "0.5"
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
notify = "8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http = "1"
regex = "1"
glob-match = "0.2"
dirs = "6"
tokio-tungstenite = "0.26"
fd-lock = "4"
time = { version = "0.3", features = ["formatting", "macros"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
